<resources>
    <string name="app_name">LinearLayout</string>
    <string name="name">Ahmed hassan</string>
    <string name="jobType">Engineer</string>
    <string name="location">UK</string>
    <string name="review">(150 Reviews)</string>
    <string name="reviewRate">4.5</string>
    <string name="time">3 hr</string>
    <string name="country">Russian</string>
    <string name="days">5 Days ago</string>
</resources>